@@ -775,16 +775,20 @@ parse_eol:
 			} while ((p = memchr(p, eol_marker, (e-p))));
 		} else {
 			do {
-				if (skip_blank_lines && !(p-s)) {
+				int windows_eol = 0;
+				if (eol_marker == '\n' && *(p - 1) == '\r') {
+					windows_eol++;
+				}
+				if (skip_blank_lines && !(p-s-windows_eol)) {
 					s = ++p;
 					continue;
 				}
 				if (PG(magic_quotes_runtime)) {
 					/* s is in target_buf which is freed at the end of the function */
-					slashed = php_addslashes(s, (p-s), &len, 0 TSRMLS_CC);
+					slashed = php_addslashes(s, (p-s-windows_eol), &len, 0 TSRMLS_CC);
 					add_index_stringl(return_value, i++, slashed, len, 0);
 				} else {
-					add_index_stringl(return_value, i++, estrndup(s, p-s), p-s, 0);
+					add_index_stringl(return_value, i++, estrndup(s, p-s-windows_eol), p-s-windows_eol, 0);
 				}
 				s = ++p;
 			} while ((p = memchr(p, eol_marker, (e-p))));
